# ai-development-os

./: .gitignore  AGENTS.md  CONTRIBUTOR_TERMS.md  DCO.txt  README.md  ROADMAP.md  SECURITY.md  scaffold_roadmap.sh
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/.github/: PULL_REQUEST_TEMPLATE.md
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  example_request.md  feature_request.md
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/.github/workflows/: ci.yml  publish.yml
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/docs/: ARCHITECTURE_PATTERNS.md  CONTRIBUTING.md  MCP.md  METHODOLOGY.md  OPEN_SOURCE_LAUNCH.md  PYPI_RELEASE.md  SCHEMA.md  WALKTHROUGH.md
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/docs/ci/: github-actions-ci.yml
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/docs/schema/: system_review_manifest.schema.json
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/examples/actual_repos/: README.md
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/examples/actual_repos/fastapi/: system_review_manifest.json
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/examples/actual_repos/linux_kernel/: README.md
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/examples/fictional_ai_ops/: README.md  system_review_manifest.json
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/src/system_review_graph/: __init__.py  builder.py  cli.py  doctor.py  documentation_graph.py  io.py  mcp_server.py  models.py  render.py  repo_context_bundle.py  scanner.py  serialize.py  validate.py
external_review_packages/importer_source_readiness_external_review_2026-06-26/sources/system-review-graph/tests/: test_builder.py  test_cli.py  test_documentation_graph.py  test_mcp_server.py
(+1122 files in other folders)
